--- a/viagens/viagens/views/Main.storyboard
+++ b/viagens/viagens/views/Main.storyboard
@@ -18,11 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mGO-6X-QzP">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mGO-6X-QzP" userLabel="View Header">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="pacote viagens" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qHb-64-vst">
-                                        <rect key="frame" x="95.5" y="35" width="129" height="25"/>
+                                        <rect key="frame" x="96" y="35" width="128.5" height="25"/>
                                         <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="18"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -71,24 +71,24 @@
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="Kla-Uc-uhC"/>
-                                            <constraint firstAttribute="width" constant="100" id="bFX-j2-bOg"/>
+                                            <constraint firstAttribute="height" constant="50" id="M1g-Hh-Odd"/>
+                                            <constraint firstAttribute="width" constant="100" id="dZ7-rd-Drd"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.57919406890000003" green="0.1280144453" blue="0.57268613580000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="UA8-Dz-quN" firstAttribute="leading" secondItem="mGO-6X-QzP" secondAttribute="leading" constant="30" id="Fct-bx-Btl"/>
-                                    <constraint firstAttribute="trailing" secondItem="eRg-qg-SWn" secondAttribute="trailing" constant="29" id="OTb-ZS-8kV"/>
                                     <constraint firstItem="AJr-fR-8oO" firstAttribute="top" secondItem="ASd-2o-2OY" secondAttribute="bottom" constant="5" id="Qob-aZ-piM"/>
                                     <constraint firstItem="qHb-64-vst" firstAttribute="centerX" secondItem="mGO-6X-QzP" secondAttribute="centerX" id="Vgp-zQ-8FS"/>
                                     <constraint firstItem="UA8-Dz-quN" firstAttribute="top" secondItem="mGO-6X-QzP" secondAttribute="top" constant="139" id="dXO-BX-y4k"/>
                                     <constraint firstItem="ASd-2o-2OY" firstAttribute="leading" secondItem="mGO-6X-QzP" secondAttribute="leading" constant="39" id="fdg-h8-JnI"/>
                                     <constraint firstItem="AJr-fR-8oO" firstAttribute="leading" secondItem="mGO-6X-QzP" secondAttribute="leading" constant="39" id="h0Y-9f-4gT"/>
                                     <constraint firstItem="ASd-2o-2OY" firstAttribute="top" secondItem="qHb-64-vst" secondAttribute="bottom" constant="4" id="kZL-1d-soC"/>
-                                    <constraint firstItem="eRg-qg-SWn" firstAttribute="top" secondItem="mGO-6X-QzP" secondAttribute="top" constant="139" id="kcA-zX-EBs"/>
                                     <constraint firstItem="qHb-64-vst" firstAttribute="top" secondItem="mGO-6X-QzP" secondAttribute="top" constant="35" id="oGk-J4-4R1"/>
                                     <constraint firstAttribute="height" constant="165" id="pKl-2L-2rk"/>
+                                    <constraint firstItem="eRg-qg-SWn" firstAttribute="top" secondItem="mGO-6X-QzP" secondAttribute="top" constant="139" id="uic-ct-C6F"/>
+                                    <constraint firstAttribute="trailing" secondItem="eRg-qg-SWn" secondAttribute="trailing" constant="29" id="wiW-Gj-IyA"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XDF-dQ-SCc">
@@ -118,13 +118,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kyK-NB-OCN">
-                                                    <rect key="frame" x="268" y="147" width="37" height="21"/>
+                                                    <rect key="frame" x="716" y="147" width="37" height="21"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
                                                     <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yO3-bp-o3d">
-                                                    <rect key="frame" x="15" y="24" width="290" height="125"/>
+                                                    <rect key="frame" x="15" y="24" width="738" height="125"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
